--- a/App/Views/layout.phtml
+++ b/App/Views/layout.phtml
@@ -13,6 +13,8 @@
 
 		<link rel="stylesheet" type="text/css" href="/css/style.css">
 
+		<link rel="stylesheet" href="/css/style.css">
+
 	</head>
 
 	<body>
