--- a/App/Views/app/quemSeguir.phtml
+++ b/App/Views/app/quemSeguir.phtml
@@ -27,7 +27,9 @@
 					
 					<div class="row mt-2 mb-2">
 						<div class="col mb-2">
-							<span class="perfilPainelNome">Nome do Usuário</span>
+							<span class="perfilPainelNome">
+								<?= $this->view->info_usuario['nome'] ?>
+							</span>
 						</div>
 					</div>
 
@@ -35,17 +37,23 @@
 
 						<div class="col">
 							<span class="perfilPainelItem">Tweets</span><br />
-							<span class="perfilPainelItemValor">0</span>
+							<span class="perfilPainelItemValor">
+								<?= $this->view->total_tweets['total_tweet'] ?>
+							</span>
 						</div>
 
 						<div class="col">
 							<span class="perfilPainelItem">Seguindo</span><br />
-							<span class="perfilPainelItemValor">0</span>
+							<span class="perfilPainelItemValor">
+								<?= $this->view->total_seguindo['total_seguindo'] ?>
+							</span>
 						</div>
 
 						<div class="col">
 							<span class="perfilPainelItem">Seguidores</span><br />
-							<span class="perfilPainelItemValor">0</span>
+							<span class="perfilPainelItemValor">
+							<?= $this->view->total_seguidores['total_seguidores'] ?>
+							</span>
 						</div>
 
 					</div>
@@ -63,7 +71,7 @@
 						<div class="card-body">
 							<form method="get" action="/quem_seguir">
 								<div class="input-group mb-3">
-									<input name="pesquisarPor" type="text" class="form-control" placeholder="Quem você está procurando?">
+									<input type="text" name="pesquisarPor" class="form-control" placeholder="Quem você está procurando?">
 									<div class="input-group-append">
 										<button class="btn btn-primary" type="submit">Procurar</button>
 									</div>
@@ -82,7 +90,6 @@
 								<div class="row">
 									<div class="col-md-6">
 										<?= $usuario['nome'] ?>
-
 									</div>
 								
 									<div class="col-md-6 d-flex justify-content-end">
@@ -101,7 +108,7 @@
 						</div>
 					</div>
 				</div>
-			<?php }?>
+			<?php } ?>
 		</div>
 	</div>
 </div>
