--- a/App/Views/app/timeline.phtml
+++ b/App/Views/app/timeline.phtml
@@ -27,7 +27,9 @@
 					
 					<div class="row mt-2 mb-2">
 						<div class="col mb-2">
-							<span class="perfilPainelNome">Nome do Usuário</span>
+							<span class="perfilPainelNome">
+								<?= $this->view->info_usuario['nome'] ?>
+							</span>
 						</div>
 					</div>
 
@@ -35,17 +37,23 @@
 
 						<div class="col">
 							<span class="perfilPainelItem">Tweets</span><br />
-							<span class="perfilPainelItemValor">0</span>
+							<span class="perfilPainelItemValor">
+								<?=$this->view->total_tweets['total_tweet'] ?>
+							</span>
 						</div>
 
 						<div class="col">
 							<span class="perfilPainelItem">Seguindo</span><br />
-							<span class="perfilPainelItemValor">0</span>
+							<span class="perfilPainelItemValor">
+							<?=$this->view->total_seguindo['total_seguindo'] ?>
+							</span>
 						</div>
 
 						<div class="col">
 							<span class="perfilPainelItem">Seguidores</span><br />
-							<span class="perfilPainelItemValor">0</span>
+							<span class="perfilPainelItemValor">
+							<?=$this->view->total_seguidores['total_seguidores'] ?>
+							</span>
 						</div>
 
 					</div>
@@ -59,7 +67,7 @@
 			<div class="row mb-2">
 				<div class="col tweetBox">
 					<form method="post" action="/tweet">
-						<textarea name="tweet" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+						<textarea class="form-control" name="tweet" id="exampleFormControlTextarea1" rows="3"></textarea>
 						
 						<div class="col mt-2 d-flex justify-content-end">
 							<button type="submit" class="btn btn-primary">Tweet</button>
@@ -70,20 +78,22 @@
 			</div>
 
 			<?php foreach($this->view->tweets as $id_tweet => $tweet) { ?>
-			<div class="row tweet">
-				<div class="col">
-					<p><strong><?= $tweet['nome'] ?></strong> <small><span class="text text-muted">- <?= $tweet['data'] ?></span></small></p>
-					<p><?= $tweet['tweet'] ?></p>
-
-					<br />
-					<form>
-						<div class="col d-flex justify-content-end">
-							<button type="submit" class="btn btn-danger"><small>Remover</small></button>
-						</div>
-					</form>
+				<div class="row tweet">
+					<div class="col">
+						<p><strong><?=$tweet['nome']?></strong> <small><span class="text text-muted">- <?=$tweet['data']?></span></small></p>
+						<p><?=$tweet['tweet']?></p>
+						<br />
+						<?php if($tweet['id_usuario'] == $_SESSION['id']) { ?>
+							<form>
+								<div class="col d-flex justify-content-end">
+									<button type="submit" class="btn btn-danger"><small>Remover</small></button>
+								</div>
+							</form>
+						<?php } ?>
+					</div>
 				</div>
-			</div>
 			<?php } ?>
+
 
 		</div>
 
